--- a/Romanian/main/Calendar.apk/res/values-ro/arrays.xml
+++ b/Romanian/main/Calendar.apk/res/values-ro/arrays.xml
@@ -298,15 +298,25 @@
         <item>Transparent</item>
         <item>Fundal alb</item>
      </string-array>
+    <string-array name="aqi_level_desc">
+        <item>空气优</item>
+        <item>空气良</item>
+        <item>轻度污染</item>
+        <item>中度污染</item>
+        <item>重度污染</item>
+        <item>严重污染</item>
+    </string-array>
+    <string-array name="aqi_level_simple_desc">
+        <item>优</item>
+        <item>良</item>
+        <item>轻度</item>
+        <item>中度</item>
+        <item>重度</item>
+        <item>严重</item>
+    </string-array>
     <string-array name="fortune_gender">
         <item>masculin</item>
         <item>feminin</item>
-    </string-array>
-    <string-array name="summary_card_text_chain">
-        <item>[Abonare] Aboneaza-te pentru a se potrivi funcțiile calendar sau servicii</item>
-        <item>[Abonare] pentru a personaliza propriul dvs. calendar de mei exclusive</item>
-        <item>[Abonare] pentru funcțiile calendar personalizate și servicii</item>
-        <item>[Abonare] a găsit o diferite caracteristici și servicii calendar</item>
     </string-array>
     <string-array name="fortune_random_birthday">
         <item>1992-01-01</item>
