--- a/Romanian/main/Mms.apk/res/values-ro/plurals.xml
+++ b/Romanian/main/Mms.apk/res/values-ro/plurals.xml
@@ -22,9 +22,29 @@
         <item quantity="other">%1$s persoane</item>
         <item quantity="one">%1$s persoană</item>
      </plurals>
+    <plurals name="to_count">
+        <item quantity="other">%d destinatari</item>
+        <item quantity="one">%d destinatar</item>
+    </plurals>
+    <plurals name="send_to_count">
+        <item quantity="other">S-au trimis %1$s mesaje</item>
+        <item quantity="one">S-a trimis %1$s mesaj</item>
+    </plurals>
+    <plurals name="group_message_failed_title">
+        <item quantity="other">"Nu s-a putut trimite la %d persoane"</item>
+        <item quantity="one">"Nu s-a putut trimite la %d contact"</item>
+    </plurals>
     <plurals name="batch_delete_confirm_dialog_message">
         <item quantity="other">Ștergeți %1$s mesaje?</item>
         <item quantity="one">Ștergeți %1$s mesaj?</item>
+    </plurals>
+    <plurals name="timed_message_expired_title">
+        <item quantity="other">"%d mesaje programate nu s-au trimis"</item>
+        <item quantity="one">"%d mesaj programat nu s-a trimis"</item>
+    </plurals>
+    <plurals name="timed_message_in_total">
+        <item quantity="other">(%d mesaje)</item>
+        <item quantity="one">(%d mesaj)</item>
     </plurals>
     <plurals name="hint_search_sms">
         <item quantity="other">%d mesaje</item>
